argocd/resources/routes/argocd-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: argocd-tls-route
  namespace: argocd
spec:
  hostnames:
    - argo.lab.sofianedjerbi.com
  parentRefs:
    - name: argocd-gateway
      namespace: default
      sectionName: argo-tls
  rules:
    - backendRefs:
        - name: argocd-server
          port: 443
